fix(refdata): fix bug with refdata upsert not working in ui #48
